fix : issue with test failures